--- a/views/greet.erb
+++ b/views/greet.erb
@@ -6,6 +6,9 @@
     <title></title>
   </head>
   <body>
+    <form class="" action="index.html" method="post">
+      
+    </form>
     <h1>Hi <%= params[:user_name] %>, nice to meet you!</h1>
   </body>
 </html>
